[tool.poetry]
name = "safe-signature-recovery"
version = "0.1.0"
description = ""
authors = ["Mikhail <@mikhailxyz>"]

[tool.poetry.dependencies]
typing-extensions = "^3.10.0"
python = "^3.8"
safe-eth-py = "5.0.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
